polished css for posts / fixed photos until cropping implemented

--- a/client/src/components/SplashPage/splashPage.css
+++ b/client/src/components/SplashPage/splashPage.css
@@ -9,7 +9,7 @@
 }
 
 .hero-center {
-  width: 100%;
+  width: 100vw;
   height: 60vw;
   display: flex;
   justify-content: center;
